--- a/src/resources/views/farm.hbs
+++ b/src/resources/views/farm.hbs
@@ -1,8 +1,9 @@
 <div class="wrapper">
     <div class="content-page">
         <div class="dsy-aside dsy-aside-fixed">
-                <div class="dsy-aside-brand"></div>
-                <hr>
+                <div class="dsy-aside-brand">
+                    <p class="title-menu">Chuồng gà</p>
+                </div>
                 <div class="dsy-aside-menu-wrapper">
                     <div class="dsy-aside-menu">
                         <ul class="dsy-aside-nav sidebar-toggle-view">
@@ -18,7 +19,7 @@
                             <li class="menu-total warning">
                                 <a href="warning">
                                     <i class='fa fa-exclamation-circle' style="font-size:24px; margin-right: 5px;"></i>
-                                    <span>Cảnh báo</span>
+                                    <span>Lịch sử cảnh báo</span>
                                 </a>                                
                             </li>
                             <li class="menu-total ctrl">                              
