--- a/src/resources/views/home.hbs
+++ b/src/resources/views/home.hbs
@@ -8,10 +8,10 @@
     <div class="container-home">
         <div class="homepage-feature">
             <a href="farm" class="farm-page">
-                <img src="https://foodtank.com/wp-content/uploads/2020/04/COVID-19-Relief_Small-Farms-.jpg" alt="" class="img-home">
+                <img src="/images/farm.JPG" alt="" class="img-home">
             </a>
             <a href="pond" class="farm-page">
-                <img src="https://cdn.shopify.com/s/files/1/0080/8861/7040/articles/Healthy_Pond_Ecosystem.jpg?v=1581409421" alt="" class="img-home">
+                <img src="/images/pond.JPG" alt="" class="img-home">
             </a>
         </div>
     </div>
