--- a/src/resources/views/pond-ctrl.hbs
+++ b/src/resources/views/pond-ctrl.hbs
@@ -10,25 +10,25 @@
                                 <div class="dsy-menu-label-text">MENU</div>
                             </li> --}}
                             <li class="menu-total dashboard">
-                                <a href="farm">
+                                <a href="pond">
                                     <i class="fa fa-bar-chart" style="font-size:24px; margin-right: 5px;"></i>
                                     <span>Giám sát</span>
                                 </a>                              
                             </li>
                             <li class="menu-total warning">
-                                <a href="warning">
+                                <a href="pond-warn">
                                     <i class='fa fa-exclamation-circle' style="font-size:24px; margin-right: 5px;"></i>
-                                    <span>Cảnh báo</span>
+                                    <span>Lịch sử cảnh báo</span>
                                 </a>                                
                             </li>
                             <li class="menu-total ctrl">                              
-                                <a href="control">
+                                <a href="pond-ctrl">
                                     <i class='material-icons' style="font-size:24px; margin-right: 5px;">tune</i>
                                     <span>Điều khiển</span>
                                 </a>              
                             </li>
                             <li class="menu-total reprt">                              
-                                <a href="report">
+                                <a href="pond-rep">
                                     <i class='material-icons' style="font-size:24px; margin-right: 5px;">assignment</i>
                                     <span>Báo cáo</span>
                                 </a>              
