--- a/src/public/css/warn.css
+++ b/src/public/css/warn.css
@@ -1,2 +1,13 @@
 .warn {
   background: linear-gradient(60deg, #FF7707, #FE9700) !important; }
+
+#clear-data1 {
+  font-size: 15px;
+  padding: 12px 40px;
+  color: white;
+  font-weight: bold;
+  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+  background-color: red;
+  margin-left: 1200px;
+  position: relative;
+  top: 120%; }
