--- a/src/resources/scss/warn.scss
+++ b/src/resources/scss/warn.scss
@@ -3,3 +3,15 @@
 }
 
 .detect {}
+
+#clear-data1 {
+    font-size: 15px;
+    padding: 12px 40px;
+    color: white;
+    font-weight: bold;
+    font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+    background-color: red;
+    margin-left: 1200px;
+    position: relative;
+    top: 120%;
+}
