--- a/src/resources/views/pond.hbs
+++ b/src/resources/views/pond.hbs
@@ -1,8 +1,9 @@
 <div class="wrapper">
     <div class="content-page">
         <div class="dsy-aside dsy-aside-fixed">
-                <div class="dsy-aside-brand"></div>
-                <hr>
+                <div class="dsy-aside-brand">
+                    <p class="title-menu">Ao cá</p>
+                </div>
                 <div class="dsy-aside-menu-wrapper">
                     <div class="dsy-aside-menu">
                         <ul class="dsy-aside-nav sidebar-toggle-view">
@@ -16,7 +17,7 @@
                                 </a>                              
                             </li>
                             <li class="menu-total warning">
-                                <a href="warning">
+                                <a href="pond-warn">
                                     <i class='fa fa-exclamation-circle' style="font-size:24px; margin-right: 5px;"></i>
                                     <span>Lịch sử cảnh báo</span>
                                 </a>                                
@@ -28,7 +29,7 @@
                                 </a>              
                             </li>
                             <li class="menu-total reprt">                              
-                                <a href="report">
+                                <a href="pond-rep">
                                     <i class='material-icons' style="font-size:24px; margin-right: 5px;">assignment</i>
                                     <span>Báo cáo</span>
                                 </a>              
@@ -39,21 +40,6 @@
         </div>
 
         <div class="container-fluid">
-            <div class="row chart">
-                <div class="col-lg-6 box-one" style="margin-left: 350px;">  
-                    <div class="chart-info-box">
-                        <div class="chart-container">
-                            <div id="tempWaterChart" class="ct-chart ct-golden-section ct-series-a"></div>
-                        </div>
-                        <p>
-                            <span>Nhiệt độ</span><br> 
-                            <span class="temp-change"><i class="fa fa-long-arrow-up"></i> <span id="tempWater"></span><sup>o</sup>C</span>
-                        </p>
-                        <hr>
-                        <p class="time"><i class="material-icons">access_time</i> <span id="current-time"></span></p>
-                    </div>
-                </div>
-            </div>
             <div class="row value">
                 <div class="col-lg-4">
                     <div class="chart-info-box">
@@ -81,6 +67,9 @@
                         <p class="time"><i class="material-icons">access_time</i> <span id="current-time-7"></span></p>
                     </div>
                 </div>
+                
+            </div>
+            <div class="row value">
                 <div class="col-lg-4">
                     <div class="chart-info-box">
                         <p>
@@ -94,7 +83,21 @@
                         <p class="time"><i class="material-icons">access_time</i> <span id="current-time-8"></span></p>
                     </div>
                 </div>
+                <div class="col-lg-4">
+                    <div class="chart-info-box">
+                        <p>
+                            <div class="card-icon airVa">
+                                <i class="fas fa-wind"></i>
+                            </div>
+                            <p class="pvalue">Nhiệt độ</p><br>
+                            <h3 id="tempWater"></h3>
+                        </p>
+                        <hr>
+                        <p class="time"><i class="material-icons">access_time</i> <span id="current-time-9"></span></p>
+                    </div>
+                </div>
             </div>
+
             <div class="row report">
                 <div class="col-lg-12">
                     <div class="card-report">
@@ -142,6 +145,7 @@
         document.getElementById('current-time-6').textContent = formattedTime;
         document.getElementById('current-time-7').textContent = formattedTime;
         document.getElementById('current-time-8').textContent = formattedTime;
+        document.getElementById('current-time-9').textContent = formattedTime;
     }
 
     setInterval(updateTime, 1000);
@@ -149,35 +153,6 @@
 
 <script>
         const socket = io();
-        // Initialize temperature and humidity chart
-        var tempWaterChart = new Chartist.Line('#tempWaterChart', {
-            labels: [],
-            series: [[]]
-        }, {
-            fullWidth: false,
-            chartPadding: {
-                left: 40,
-                bottom: 10,
-                top: 30
-            },
-            axisY: {
-                onlyInteger: true,
-                low: 0,
-                high: 40,
-                offset: 20,
-                scaleMinSpace: 50, //Thêm option này để tăng khoảng cách giữa đường kẻ dọc
-                showGrid: true, //Thêm option này để hiển thị đường kẻ dọc
-                classNames: {
-                    grid: 'ct-grids'
-                }
-            },
-            axisX: {
-                labelInterpolationFnc: function(value, index) {
-                    return index % 1 === 0 ? value : null; //Thay đổi option này để cách 2 ô là 1 giá trị label trục x
-                },
-                showGrid: true //Thêm option này để hiển thị đường kẻ dọc
-            }
-        });
 
         var tempCount = 0;
 
@@ -185,6 +160,15 @@
         
         var time_table = '';
         let dataCount = 0;
+        const localStorageKey4 = 'dataArrPond';
+
+        function getDataFromLocalStorage1() {
+            const savedData = localStorage.getItem(localStorageKey4);
+            if (savedData) {
+                dataArr = JSON.parse(savedData);
+                updateTable();
+            }
+        }
 
         socket.on('data4', function(data) {  
             localStorage.setItem('turbidity', data.Turbidity); 
@@ -192,35 +176,26 @@
             localStorage.setItem('ph', data.Ph);
             localStorage.setItem('tempWater', data.TempWater);
 
-            document.querySelector('#turbidity').textContent = data.Turbidity.toFixed(2) + ' ' + 'NTU';
+            document.querySelector('#turbidity').textContent = data.Turbidity + ' ' + 'NTU';
             document.querySelector('#thucan').textContent = data.Thucan + ' ' + 'g';
             document.querySelector('#ph').textContent = data.Ph + ' ' + 'ph';
-            document.querySelector('#tempWater').textContent = data.TempWater;
+            document.querySelector('#tempWater').textContent = data.TempWater + ' ' + '℃';
 
             // Update the temperature chart with the new data
             var time = new Date().toLocaleTimeString();
-
-            if (tempCount >= 5) {
-                tempWaterChart.data.labels.shift();
-                tempWaterChart.data.series[0].shift();
-            } else {
-                tempCount++;
-            }
-            tempWaterChart.data.labels.push(time);
-            tempWaterChart.data.series[0].push(data.TempWater);
-
-            tempWaterChart.update();
 
             // Add new data to the beginning of the array
             dataArr.unshift(data);
             // Keep only the first 10 items in the array
             dataArr = dataArr.slice(0, 10);
 
+            localStorage.setItem(localStorageKey4, JSON.stringify(dataArr));
             // Chỉ cập nhật bảng khi có dữ liệu mới
             if (dataCount % 10 === 0) {
                 updateTable1();
             }
             data.time = updateTime1();
+            
         });
 
         function updateTime1() {
@@ -263,6 +238,8 @@
 
 
         window.addEventListener('load', function() {  
+            getDataFromLocalStorage1();
+
             const turbidity = localStorage.getItem('turbidity');
             const thucan = localStorage.getItem('thucan');
             const ph = localStorage.getItem('ph');
@@ -271,6 +248,6 @@
             document.querySelector('#turbidity').textContent = turbidity + ' ' + 'NTU';
             document.querySelector('#thucan').textContent = thucan + ' ' + 'g';
             document.querySelector('#ph').textContent = ph + ' ' + 'ph';
-            document.querySelector('#tempWater').textContent = tempWater;
+            document.querySelector('#tempWater').textContent = tempWater + ' ' + '℃';
         });
     </script>
