--- a/src/resources/views/pond-ctrl.hbs
+++ b/src/resources/views/pond-ctrl.hbs
@@ -111,7 +111,7 @@
         output.innerHTML = foodAmount + 'g';
     }
 
-    var ipAddress = "192.168.1.3";
+    var ipAddress = "{{ipAddress}}";
     var servoState = false;
 
     function handleClick4() {
