--- a/src/resources/views/pond-ctrl.hbs
+++ b/src/resources/views/pond-ctrl.hbs
@@ -111,7 +111,7 @@
         output.innerHTML = foodAmount + 'g';
     }
 
-    var ipAddress = "nodejs-384803.ts.r.appspot.com/control";
+    var ipAddress = "192.168.1.12";
     var servoState = false;
 
     function handleClick4() {
